--- a/hello-service/src/main/kubefiles/deployment.yml
+++ b/hello-service/src/main/kubefiles/deployment.yml
@@ -11,7 +11,6 @@ spec:
     metadata:
       labels:
         app: hello-app
-        env: dev
     spec:
       containers:
         - name: hello-app
@@ -23,12 +22,13 @@ spec:
             httpGet:
               port: 8080
               path: /health/live
-            initialDelaySeconds: 3
-            periodSeconds: 5
+            initialDelaySeconds: 1
+            periodSeconds: 3
             timeoutSeconds: 2
           readinessProbe:
             httpGet:
               path: /health/ready
               port: 8080
-            initialDelaySeconds: 3
-            periodSeconds: 5
+            initialDelaySeconds: 1
+            periodSeconds: 3
+            timeoutSeconds: 2
