--- a/hello-service/src/main/kubefiles/deployment.yml
+++ b/hello-service/src/main/kubefiles/deployment.yml
@@ -2,15 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-app
+  namespace: quarkus-hello-demo
 spec:
   replicas: 3
   selector:
     matchLabels:
       app: hello-app
+      namespace: quarkus-hello-demo
   template:
     metadata:
       labels:
         app: hello-app
+        namespace: quarkus-hello-demo
     spec:
       containers:
         - name: hello-app
