--- a/hello-service/src/main/kubefiles/node-port.yml
+++ b/hello-service/src/main/kubefiles/node-port.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-service
+  namespace: quarkus-hello-demo
 spec:
   ports:
     - port: 8080
@@ -10,3 +11,4 @@ spec:
   type: NodePort
   selector:
     app: hello-app
+    namespace: quarkus-hello-demo
