--- a/hello-service/src/main/docker/Dockerfile.jvm
+++ b/hello-service/src/main/docker/Dockerfile.jvm
@@ -7,18 +7,18 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.jvm -t quarkus/hello-service-jvm .
+# docker build -f src/main/docker/Dockerfile.jvm -t moduscreate/quarkus-hello-service:latest .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/hello-service-jvm
+# docker run -i --rm -p 8080:8080 moduscreate/quarkus-hello-service:latest
 #
 # If you want to include the debug port into your docker image
 # you will have to expose the debug port (default 5005) like this :  EXPOSE 8080 5050
 # 
 # Then run the container using : 
 #
-# docker run -i --rm -p 8080:8080 -p 5005:5005 -e JAVA_ENABLE_DEBUG="true" quarkus/hello-service-jvm
+# docker run -i --rm -p 8080:8080 -p 5005:5005 -e JAVA_ENABLE_DEBUG="true" moduscreate/quarkus-hello-service:latest
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.1
