--- a/cqrs-quarkus-kafka/balance-service/src/main/resources/application.properties
+++ b/cqrs-quarkus-kafka/balance-service/src/main/resources/application.properties
@@ -1,16 +1,29 @@
-quarkus.mongodb.connection-string = mongodb://localhost:27017
-quarkus.mongodb.database = bankaccount
+# quarkus port
+quarkus.http.port=8081
+%prod.quarkus.http.port=8080
+quarkus.http.root-path=/transaction-service
+
+# configure your datasource
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=balance_service
+quarkus.datasource.password=balance_service
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/balance_service
+
+%prod.quarkus.datasource.username=balance_service
+%prod.quarkus.datasource.password=balance_service
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/balance_service
+
+# Flyway minimal config properties
+quarkus.flyway.migrate-at-start=true
 
 quarkus.kafka-streams.bootstrap-servers=localhost:9092
 quarkus.kafka-streams.application-id=balance-service
 quarkus.kafka-streams.application-server=localhost:8080
 quarkus.kafka-streams.topics=transactions
-
-# streams options
 kafka-streams.cache.max.bytes.buffering=10240
 kafka-streams.commit.interval.ms=1000
 kafka-streams.metadata.max.age.ms=500
 kafka-streams.auto.offset.reset=earliest
 kafka-streams.metrics.recording.level=DEBUG
 
-quarkus.http.port=8081
+quarkus.kafka.health.enabled=true
