--- a/cqrs-quarkus-kafka/kubefiles/ingress.yml
+++ b/cqrs-quarkus-kafka/kubefiles/ingress.yml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: hello-ingress
-  namespace: quarkus-hello-demo
+  name: bankaccount-ingress
+  namespace: quarkus-cqrs-demo
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
   labels:
-    app: hello-ingress
+    app: bankaccount-ingress
 spec:
   rules:
     - http:
         paths:
-          - path: /*
+          - path: /transaction-service/*
             backend:
-              serviceName: hello-service
+              serviceName: transaction-service
               servicePort: 8080
