--- a/cqrs-quarkus-kafka/transaction-service/.gitignore
+++ b/cqrs-quarkus-kafka/transaction-service/.gitignore
@@ -15,6 +15,7 @@ nb-configuration.xml
 
 # Visual Studio Code
 .vscode
+.factorypath
 
 # OSX
 .DS_Store
@@ -27,6 +28,9 @@ nb-configuration.xml
 *.orig
 *.rej
 
-# Gradle
-.gradle/
-build/
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
