--- a/cqrs-quarkus-kafka/transaction-service/src/main/docker/Dockerfile.native
+++ b/cqrs-quarkus-kafka/transaction-service/src/main/docker/Dockerfile.native
@@ -7,16 +7,16 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/transaction-service .
+# docker build -f src/main/docker/Dockerfile.native -t moduscreate/quarkus-transaction-service:v1 .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/transaction-service
+# docker run -i --rm -p 8080:8080 moduscreate/quarkus-transaction-service:v1
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.1
 WORKDIR /work/
-COPY build/*-runner /work/application
+COPY target/*-runner /work/application
 
 # set up permissions for user `1001`
 RUN chmod 775 /work /work/application \
