--- a/cqrs-quarkus-kafka/transaction-service/src/main/resources/application.properties
+++ b/cqrs-quarkus-kafka/transaction-service/src/main/resources/application.properties
@@ -1,8 +1,17 @@
+# quarkus port
+quarkus.http.port=8080
+%prod.quarkus.http.port=8080
+quarkus.http.root-path=/transaction-service
+
 # configure your datasource
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=bankaccount
-quarkus.datasource.password=bankaccount
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/bankaccount
+quarkus.datasource.username=transaction_service
+quarkus.datasource.password=transaction_service
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/transaction_service
+
+%prod.quarkus.datasource.username=transaction_service
+%prod.quarkus.datasource.password=transaction_service
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/transaction_service
 
 # Flyway minimal config properties
 quarkus.flyway.migrate-at-start=true
@@ -11,3 +20,5 @@ quarkus.flyway.migrate-at-start=true
 mp.messaging.outgoing.transactions.connector=smallrye-kafka
 mp.messaging.outgoing.transactions.topic=transactions
 mp.messaging.outgoing.transactions.value.serializer=io.quarkus.kafka.client.serialization.JsonbSerializer
+
+quarkus.kafka.health.enabled=true
