--- a/cqrs-quarkus-kafka/balance-service/src/main/resources/application.properties
+++ b/cqrs-quarkus-kafka/balance-service/src/main/resources/application.properties
@@ -1,24 +1,16 @@
 # quarkus port
 quarkus.http.port=8081
-%prod.quarkus.http.port=8080
-quarkus.http.root-path=/transaction-service
+quarkus.http.root-path=/balance-service
 
-# configure your datasource
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=balance_service
 quarkus.datasource.password=balance_service
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/balance_service
-
-%prod.quarkus.datasource.username=balance_service
-%prod.quarkus.datasource.password=balance_service
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/balance_service
-
-# Flyway minimal config properties
 quarkus.flyway.migrate-at-start=true
 
-quarkus.kafka-streams.bootstrap-servers=localhost:9092
-quarkus.kafka-streams.application-id=balance-service
+#quarkus.kafka-streams.bootstrap-servers=localhost:9092
 quarkus.kafka-streams.application-server=localhost:8080
+quarkus.kafka-streams.application-id=balance-service
 quarkus.kafka-streams.topics=transactions
 kafka-streams.cache.max.bytes.buffering=10240
 kafka-streams.commit.interval.ms=1000
@@ -27,3 +19,11 @@ kafka-streams.auto.offset.reset=earliest
 kafka-streams.metrics.recording.level=DEBUG
 
 quarkus.kafka.health.enabled=true
+
+######PROD CONFIGS
+%prod.quarkus.http.port=8080
+%prod.quarkus.datasource.username=balance_service
+%prod.quarkus.datasource.password=balance_service
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/balance_service
+
+quarkus.kafka-streams.bootstrap-servers=b-1.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092,b-2.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092,b-3.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092
