--- a/cqrs-quarkus-kafka/transaction-service/src/main/resources/application.properties
+++ b/cqrs-quarkus-kafka/transaction-service/src/main/resources/application.properties
@@ -1,24 +1,23 @@
 # quarkus port
 quarkus.http.port=8080
-%prod.quarkus.http.port=8080
 quarkus.http.root-path=/transaction-service
 
-# configure your datasource
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=transaction_service
 quarkus.datasource.password=transaction_service
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/transaction_service
-
-%prod.quarkus.datasource.username=transaction_service
-%prod.quarkus.datasource.password=transaction_service
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/transaction_service
-
-# Flyway minimal config properties
 quarkus.flyway.migrate-at-start=true
 
-# Configure the Kafka sink (we write to it)
 mp.messaging.outgoing.transactions.connector=smallrye-kafka
 mp.messaging.outgoing.transactions.topic=transactions
 mp.messaging.outgoing.transactions.value.serializer=io.quarkus.kafka.client.serialization.JsonbSerializer
 
 quarkus.kafka.health.enabled=true
+
+##### PROD CONFIGS
+%prod.quarkus.http.port=8080
+%prod.quarkus.datasource.username=transaction_service
+%prod.quarkus.datasource.password=transaction_service
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/transaction_service
+
+mp.messaging.outgoing.transactions.bootstrap.servers=b-1.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092,b-2.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092,b-3.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092
