--- a/cqrs-quarkus-kafka/transaction-service/src/main/resources/application.properties
+++ b/cqrs-quarkus-kafka/transaction-service/src/main/resources/application.properties
@@ -18,6 +18,6 @@ quarkus.kafka.health.enabled=true
 %prod.quarkus.http.port=8080
 %prod.quarkus.datasource.username=transaction_service
 %prod.quarkus.datasource.password=transaction_service
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/transaction_service
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo-final-snapshot.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/transaction_service
 
-mp.messaging.outgoing.transactions.bootstrap.servers=b-1.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092,b-2.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092,b-3.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092
+%mp.messaging.outgoing.transactions.bootstrap.servers=b-1.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092,b-3.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092,b-2.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092
