--- a/cqrs-quarkus-kafka/balance-service/src/main/resources/application.properties
+++ b/cqrs-quarkus-kafka/balance-service/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.datasource.password=balance_service
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/balance_service
 quarkus.flyway.migrate-at-start=true
 
-#quarkus.kafka-streams.bootstrap-servers=localhost:9092
+quarkus.kafka-streams.bootstrap-servers=localhost:9092
 quarkus.kafka-streams.application-server=localhost:8080
 quarkus.kafka-streams.application-id=balance-service
 quarkus.kafka-streams.topics=transactions
@@ -24,6 +24,5 @@ quarkus.kafka.health.enabled=true
 %prod.quarkus.http.port=8080
 %prod.quarkus.datasource.username=balance_service
 %prod.quarkus.datasource.password=balance_service
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/balance_service
-
-quarkus.kafka-streams.bootstrap-servers=b-1.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092,b-2.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092,b-3.quarkus-cqrs-demo.sj7x3x.c3.kafka.us-east-1.amazonaws.com:9092
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo-final-snapshot.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/balance_service
+%prod.quarkus.kafka-streams.bootstrap-servers=b-1.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092,b-3.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092,b-2.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092
