--- a/hello-service/src/main/kubefiles/basic-deployment/ingress-alb.yml
+++ b/hello-service/src/main/kubefiles/basic-deployment/ingress-alb.yml
@@ -1,18 +1,18 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: hello-ingress
+  name: quarkus-hello
   namespace: quarkus-hello-demo
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
   labels:
-    app: hello-ingress
+    app: quarkus-hello
 spec:
   rules:
     - http:
         paths:
           - path: /*
             backend:
-              serviceName: hello-service
+              serviceName: quarkus-hello
               servicePort: 8080
