--- a/cqrs-quarkus-kafka/transaction-service/src/main/resources/application.properties
+++ b/cqrs-quarkus-kafka/transaction-service/src/main/resources/application.properties
@@ -20,5 +20,5 @@ quarkus.kafka.health.enabled=true
 %prod.quarkus.datasource.password=transaction_service
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://cqrsquarkusdemo-final-snapshot.cwepbjdkzzq5.us-east-1.rds.amazonaws.com:5432/transaction_service
 
-%prod.mp.messaging.outgoing.transactions.bootstrap.servers=b-1.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092,b-3.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092,b-2.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092
-%prod.kafka.bootstrap.servers=b-1.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092,b-3.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092,b-2.cqrs-quarkus-demo.az7io5.c3.kafka.us-east-1.amazonaws.com:9092
+%prod.mp.messaging.outgoing.transactions.bootstrap.servers=174.129.239.188:9092
+%prod.kafka.bootstrap.servers=174.129.239.188:9092
