--- a/cqrs-quarkus-kafka/transaction-service/src/main/kubefiles/deployment.yml
+++ b/cqrs-quarkus-kafka/transaction-service/src/main/kubefiles/deployment.yml
@@ -1,3 +1,19 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: transaction-service
+  namespace: quarkus-cqrs-demo
+spec:
+  ports:
+    - port: 8080
+      targetPort: 8080
+      protocol: TCP
+  type: NodePort
+  selector:
+    app: transaction-app
+    namespace: quarkus-cqrs-demo
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
