--- a/hello-service/src/main/kubefiles/canary-deployment/virtual-services/stage-two-virtual-service copy.yml
+++ b/hello-service/src/main/kubefiles/canary-deployment/virtual-services/stage-two-virtual-service copy.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: quarkus-hello-weight-based-rule
+  name: quarkus-hello-stage-two
   namespace: quarkus-hello-demo
 spec:
   gateways:
