--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -7,5 +7,5 @@ quarkus.datasource.username = user_service
 quarkus.datasource.password = user_service
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/user_service
 
-# drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation=update
+# Flyway minimal config properties
+quarkus.flyway.migrate-at-start=true
