--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 services:
 
   postgres-service:
-    container_name: user-postgres
+    container_name: pg-instance
     ports:
       - "5432:5432"
     image: postgres
