--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 # key = value
 
 quarkus.http.port=8024
-quarkus.datasource.reactive.url=postgresql://localhost:5432/user_service
+quarkus.datasource.reactive.url=postgresql://localhost:5432/payment_service
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = user_service
-quarkus.datasource.password = user_service
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/user_service
+quarkus.datasource.username = payment_service
+quarkus.datasource.password = payment_service
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/payment_service
 
 # Flyway minimal config properties
 quarkus.flyway.migrate-at-start=true
