--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -73,7 +73,6 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-postgresql</artifactId>
     </dependency>
-
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-mutiny</artifactId>
@@ -89,9 +88,8 @@
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-kotlin</artifactId>
-      <version>LATEST</version>
+      <version>2.11.3</version>
     </dependency>
-
   </dependencies>
   <build>
     <sourceDirectory>src/main/kotlin</sourceDirectory>
