--- a/stock-market-app/operations-receiver-service/src/main/resources/application.properties
+++ b/stock-market-app/operations-receiver-service/src/main/resources/application.properties
@@ -10,3 +10,11 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/operations_servic
 
 # Flyway minimal config properties
 quarkus.flyway.migrate-at-start=true
+
+# Configures the AMQP broker credentials.
+amqp-username=quarkus
+amqp-password=quarkus
+
+# Configure the AMQP connector to write to the `prices` address
+mp.messaging.outgoing.stocksOperations.connector=smallrye-amqp
+mp.messaging.outgoing.stocksOperations.address=stocksOperations
