--- a/stock-market-app/operations-receiver-service/pom.xml
+++ b/stock-market-app/operations-receiver-service/pom.xml
@@ -90,6 +90,10 @@
       <artifactId>jackson-module-kotlin</artifactId>
       <version>2.11.3</version>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-reactive-messaging-amqp</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>src/main/kotlin</sourceDirectory>
