--- a/stock-market-app/operations-receiver-service/src/main/resources/application.properties
+++ b/stock-market-app/operations-receiver-service/src/main/resources/application.properties
@@ -6,15 +6,11 @@ quarkus.datasource.reactive.url=postgresql://localhost:5432/operations_service
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = operations_service
 quarkus.datasource.password = operations_service
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/operations_service
 
-# Flyway minimal config properties
-quarkus.flyway.migrate-at-start=true
+# Configure the SmallRye Kafka connector
+kafka.bootstrap.servers=localhost:9092
 
-# Configures the AMQP broker credentials.
-amqp-username=quarkus
-amqp-password=quarkus
-
-# Configure the AMQP connector to write to the `prices` address
-mp.messaging.outgoing.stocksOperations.connector=smallrye-amqp
-mp.messaging.outgoing.stocksOperations.address=stocksOperations
+# Configure the Kafka sink (we write to it)
+mp.messaging.outgoing.stockOperations.connector=smallrye-kafka
+mp.messaging.outgoing.stockOperations.topic=stockOperations
+mp.messaging.outgoing.stockOperations.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
